<resources>
    <string name="app_name">OceanWave</string>
    <string name="welcome">HELLO THERE, WELCOME TO KMA</string>
    <string name="loginToContinue">Login to continue</string>
    <string name="RegisterNewAccount">Register New Account</string>
    <string name="AddPhoto">Add Photo</string>
    <string name="OceanWave">OceanWave</string>
    <string name="SignOut">Sign Out</string>
    <string name="Setting">Setting</string>
    <string name="type_a_message">Type a message</string>
    <string name="name">Name :</string>
    <string name="username">Username :</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">cancel</string>
    <string name="are_you_sure_for_signing_out">Are you sure for signing out?</string>
    <string name="online">Online</string>
    <string name="errorUserNameSignIn">you need to enter your username</string>
    <string name="username_or_email">username or email</string>
    <string name="password1">Password</string>
    <string name="your_name">Your Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_name">Manage Name</string>
    <string name="your_new_name">Your new name</string>
    <string name="you_need_to_enter_your_new_name">you need to enter your new name</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="you_need_to_enter_your_new_username_or_email">you need to enter your new Username or Email</string>
    <string name="manage_username">Manage Username</string>
    <string name="your_new_user_name">your new user name</string>
    <string name="manage_password">Manage Password</string>
    <string name="pass_regulation">Mật khẩu của bạn bạn phải dài hơn 6 ký tự và có thể kết hợp với các số, chữ cái cùng ký tự đặc biệt (!$@%%).</string>
    <string name="recent_password">Recent Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="image_description">TODO</string>
    <string name="account">Account</string>
    <string name="name2">name</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="confirm_password0">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
</resources>