<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySetting.ManagerName">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ManagerNameBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_close"
            app:tint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/ViewSupportName"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toEndOf="@+id/ManagerNameBack"
            app:layout_constraintTop_toTopOf="@+id/ManagerNameBack"
            app:layout_constraintBottom_toBottomOf="@+id/ManagerNameBack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:ellipsize="end"
            android:text="@string/manage_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ViewSupportName"
            app:layout_constraintTop_toTopOf="@+id/ViewSupportName"
            app:layout_constraintBottom_toBottomOf="@+id/ViewSupportName"
            app:layout_goneMarginEnd="@dimen/_8sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottomConfirmChangeName"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_check"
            app:tint="@color/blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




    <TextView
        android:id="@+id/textSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/you_need_to_enter_your_new_name"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/BackLayout"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/YourNameEdit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_53sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:hintTextColor="@color/black"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/textSupport">

        <EditText
            android:autofillHints="name"
            android:id="@+id/yourNewNameEditText"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/your_new_name"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textSupport2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/confirm_your_password"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/YourNameEdit"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordEdittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52sdp"
        app:hintTextColor="@color/black"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/textSupport2"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/confirmPass"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/confirm_password"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>