<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySetting.ManagerPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ManagerPassBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_close"
            app:tint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/ViewSupportName"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toEndOf="@+id/ManagerPassBack"
            app:layout_constraintTop_toTopOf="@+id/ManagerPassBack"
            app:layout_constraintBottom_toBottomOf="@+id/ManagerPassBack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:ellipsize="end"
            android:text="@string/manage_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ViewSupportName"
            app:layout_constraintTop_toTopOf="@+id/ViewSupportName"
            app:layout_constraintBottom_toBottomOf="@+id/ViewSupportName"
            app:layout_goneMarginEnd="@dimen/_8sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottomConfirmChangePass"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_check"
            app:tint="@color/blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textRegulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/BackLayout"
        android:text="@string/pass_regulation"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/recentPassLayout"
       android:layout_width="match_parent"
       android:layout_height="@dimen/_53sdp"
       android:paddingEnd="@dimen/_5sdp"
       android:paddingStart="@dimen/_5sdp"
       app:hintTextColor="@color/black"
       android:layout_marginTop="@dimen/_20sdp"
       app:layout_constraintTop_toBottomOf="@+id/textRegulation"
       app:passwordToggleEnabled="true">

       <EditText
           android:id="@+id/recentPassEdittext"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_50sdp"
           android:background="@android:color/transparent"
           android:inputType="textPassword"
           android:hint="@string/recent_password"/>

   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NewPassLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_54sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        app:hintTextColor="@color/black"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintTop_toBottomOf="@+id/recentPassLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/NewPassEdittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:hint="@string/new_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmNewPassLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_53sdp"
        android:paddingEnd="@dimen/_5sdp"
        app:hintTextColor="@color/black"
        android:paddingStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/NewPassLayout">

        <EditText
            android:id="@+id/confirmNewPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password"/>

    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>