<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".Activity.activity_chat">

    <View
        android:id="@+id/ViewBackGround"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/backgrouf_for_chat_secren"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonSend"/>

    <View
        android:id="@id/ViewSuppoter2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ViewSuppoterRecycle"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack2"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageRecProfile"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/OceanWave"
        app:riv_corner_radius="@dimen/_150sdp"
        android:background="@drawable/shape_image"
        app:layout_constraintTop_toTopOf="@id/imageBack2"
        app:layout_constraintBottom_toBottomOf="@id/imageBack2"
        app:layout_constraintStart_toEndOf="@+id/imageBack2"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/inforButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_info"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textNameSend"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/_4sdp"
        android:ellipsize="end"
        android:gravity="left"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/imageRecProfile"
        app:layout_constraintBottom_toBottomOf="@+id/imageRecProfile"
        app:layout_constraintStart_toEndOf="@id/imageRecProfile"
        app:layout_constraintEnd_toStartOf="@id/inforButton"/>

    <View
        android:id="@+id/ViewSuppoterRecycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/ViewBackGround"
        app:layout_constraintTop_toBottomOf="@+id/imageBack2"/>

    <TextView
        android:id="@+id/textOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/ViewSuppoterRecycle"
        android:background="@color/green"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:padding="@dimen/_2sdp"
        android:visibility="gone"
        android:text="@string/online"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="@dimen/_20sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/ViewSuppoterRecycle"
        app:layout_constraintTop_toBottomOf="@+id/ViewSuppoter2"
        app:layout_constraintVertical_bias="0.0"
        app:stackFromEnd="true"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp" />

    <ProgressBar
        android:id="@+id/SendProgress"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintTop_toTopOf="@+id/ViewBackGround"
        app:layout_constraintBottom_toBottomOf="@+id/ViewBackGround"
        app:layout_constraintEnd_toEndOf="@+id/ViewBackGround"
        app:layout_constraintStart_toStartOf="@+id/ViewBackGround"/>

    <FrameLayout
        android:id="@+id/buttonSend"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/shape_send"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_send_24"
            android:tint="@color/black"/>

    </FrameLayout>

    <EditText
        android:id="@+id/inputMess"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:hint="@string/type_a_message"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/black"
        android:inputType="text"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:background="@drawable/shape_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSend"/>



</androidx.constraintlayout.widget.ConstraintLayout>